---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: [u8; 5], result: [u8; 32]) {
    // Safety: comment added by `nargo expand`
    unsafe {
        assert(blake2s(x) == result);
    }
}

unconstrained fn blake2s(x: [u8; 5]) -> [u8; 32] {
    std::hash::blake2s(x)
}
